# learn-otel

./: .dockerignore  Cargo.toml  Readme.MD  client.Dockerfile  server.Dockerfile  skaffold.yaml
app/: Cargo.toml
app/src/: main.rs
client/: Cargo.toml  default.toml
client/src/: main.rs
common/: Cargo.toml
common/src/: config.rs  lib.rs  logging.rs  process_control.rs
infra/client/: local.yaml
infra/server/: local.yaml
server/: Cargo.toml  default.toml
server/src/: main.rs
