[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.11"
serde = { version = "1.0.138", features = ["derive"] }
tokio = { version = "1.19.2", features = ["full"] }
common = { path= "../common" }
hyper = { version="0.14.19", features = ["full"]}
reqwest = { version = "0.11.11", features = ["json"] }
tracing = "0.1.35"
tracing-opentelemetry = "0.17.4"
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-http = { version = "0.6.0", features = ["reqwest"] }
