[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry = { version = "0.17.0", features = ["rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio", "rt-tokio-current-thread"] }
serde = "1.0.138"
tokio = { version = "1.19.2", features = ["full"] }
tracing = { version = "0.1.35", features = ["async-await"] }
tracing-opentelemetry = "0.17.4"
tracing-subscriber = { version = "0.3.14", features = ["env-filter", "json"] }

